--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,11 @@
     "start": "next start",
     "lint": "next lint",
     "json-server": "json-server --watch db.json --port 3001"
-    
   },
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-sanity": "^9.8.32",
     "react": "^19.0.0",
