--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
+    "axios": "^1.7.9",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-sanity": "^9.8.32",
