--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "json-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@sanity/client": "^6.24.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
     "axios": "^1.7.9",
