--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "json-server": "json-server --watch db.json --port 3001"
+    "json-server": "json-server --watch db.json --port 3001",
+    "import-data": "ts-node scripts/importSanityData.mjs"
   },
   "dependencies": {
     "@sanity/client": "^6.24.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-sanity": "^9.8.32",
